--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "core-js": "^3.8.3",
     "ethers": "^5.6.5",
     "express": "^4.18.1",
+    "truffle": "^5.6.8",
+    "truffle-hdwallet-provider": "^1.0.17",
     "vue": "^2.6.14",
     "web3": "^1.8.0"
   },
